WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47151
CSS 2.1 failure: anonymous-boxes-001
https://bugs.webkit.org/show_bug.cgi?id=47151
Summary
CSS 2.1 failure: anonymous-boxes-001
Simon Fraser (smfr)
Reported
2010-10-04 21:40:56 PDT
Created
attachment 69746
[details]
anonymous-boxes-001.htm This test fails: html4/anonymous-boxes-001 fail
Attachments
anonymous-boxes-001.htm
(1.17 KB, text/html)
2010-10-04 21:40 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(27.48 KB, patch)
2011-03-10 16:08 PST
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2011-03-10 16:08:57 PST
Created
attachment 85402
[details]
Patch
WebKit Review Bot
Comment 2
2011-03-10 16:10:59 PST
Attachment 85402
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/WebCore/rendering/RenderBox.cpp:1819: Should only a single space after a punctuation in a comment. [whitespace/comments] [5] Source/WebCore/rendering/RenderBox.cpp:1821: Should only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 3
2011-03-10 16:34:19 PST
Fixed in
r80786
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug