https://bugs.webkit.org/show_bug.cgi?id=47151

Reviewed by Simon Fraser.

Percentage heights should skip anonymous containing blocks when computing the used value.

Added fast/block/basic/percentage-height-inside-anonymous-block.html

Source/WebCore:

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computePercentageLogicalHeight):

LayoutTests:

* fast/block/basic/percent-height-inside-anonymous-block.html: Added.
* platform/mac/fast/block/basic/percent-height-inside-anonymous-block-expected.checksum: Added.
* platform/mac/fast/block/basic/percent-height-inside-anonymous-block-expected.png: Added.
* platform/mac/fast/block/basic/percent-height-inside-anonymous-block-expected.txt: Added.



Canonical link: https://commits.webkit.org/70674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80786 268f45cc-cd09-0410-ab3c-d52691b4dbfc